--- a/caffe2/CMakeLists.txt
+++ b/caffe2/CMakeLists.txt
@@ -33,15 +33,15 @@ else()
     set(ATEN_THREADING "NATIVE" CACHE STRING "ATen parallel backend")
   endif()
 endif()
-if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-  # Workaround for https://gcc.gnu.org/bugzilla/show_bug.cgi?id=80947 in EmbeddingBag.cpp
-  set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-  set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-  set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-  set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-  set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-attributes)
-  set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-attributes)
-endif()
+# if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+#   # Workaround for https://gcc.gnu.org/bugzilla/show_bug.cgi?id=80947 in EmbeddingBag.cpp
+#   set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
+#   set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
+#   set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
+#   set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
+#   set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-attributes)
+#   set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-attributes)
+# endif()
 set(AT_PARALLEL_OPENMP 0)
 set(AT_PARALLEL_NATIVE 0)
 set(AT_PARALLEL_NATIVE_TBB 0)
@@ -588,10 +588,10 @@ if(NOT INTERN_BUILD_MOBILE OR NOT BUILD_CAFFE2_MOBILE)
 
     if(CMAKE_CXX_COMPILER_ID MATCHES "Clang" OR CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
       # TODO: Delete this line once https://github.com/pytorch/pytorch/pull/55889 lands
-      set_source_files_properties(../../torch/csrc/jit/serialization/export.cpp PROPERTIES COMPILE_FLAGS -Wno-deprecated-declarations)
+      set_source_files_properties(../torch/csrc/jit/serialization/export.cpp PROPERTIES COMPILE_FLAGS -Wno-deprecated-declarations)
 
       # TODO: Delete this when https://github.com/pytorch/pytorch/issues/35026 is fixed
-      set_source_files_properties(../../torch/csrc/autograd/record_function_ops.cpp PROPERTIES COMPILE_FLAGS -Wno-deprecated-declarations)
+      set_source_files_properties(../torch/csrc/autograd/record_function_ops.cpp PROPERTIES COMPILE_FLAGS -Wno-deprecated-declarations)
     endif()
   endif()
   list(APPEND TORCH_SRCS ${LIBTORCH_CMAKE_SRCS})
@@ -1049,10 +1049,10 @@ if(NOT INTERN_BUILD_MOBILE OR NOT BUILD_CAFFE2_MOBILE)
     ${CMAKE_BINARY_DIR}/aten/src)
 
     if(CMAKE_CXX_COMPILER_ID MATCHES "Clang" OR CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-      set_source_files_properties(../${CMAKE_CURRENT_SOURCE_DIR}/../aten/src/ATen/native/QuantizedLinear.cpp PROPERTIES COMPILE_FLAGS -Wno-deprecated-declarations)
-      set_source_files_properties(../${CMAKE_CURRENT_SOURCE_DIR}/../aten/src/ATen/native/RNN.cpp PROPERTIES COMPILE_FLAGS -Wno-deprecated-declarations)
-      set_source_files_properties(../${CMAKE_CURRENT_SOURCE_DIR}/../aten/src/ATen/native/quantized/cpu/qlinear_prepack.cpp PROPERTIES COMPILE_FLAGS -Wno-deprecated-declarations)
-      set_source_files_properties(../${CMAKE_CURRENT_SOURCE_DIR}/../aten/src/ATen/native/quantized/cpu/qlinear_unpack.cpp PROPERTIES COMPILE_FLAGS -Wno-deprecated-declarations)
+      set_source_files_properties(${CMAKE_CURRENT_SOURCE_DIR}/../aten/src/ATen/native/QuantizedLinear.cpp PROPERTIES COMPILE_FLAGS -Wno-deprecated-declarations)
+      set_source_files_properties(${CMAKE_CURRENT_SOURCE_DIR}/../aten/src/ATen/native/RNN.cpp PROPERTIES COMPILE_FLAGS -Wno-deprecated-declarations)
+      set_source_files_properties(${CMAKE_CURRENT_SOURCE_DIR}/../aten/src/ATen/native/quantized/cpu/qlinear_prepack.cpp PROPERTIES COMPILE_FLAGS -Wno-deprecated-declarations)
+      set_source_files_properties(${CMAKE_CURRENT_SOURCE_DIR}/../aten/src/ATen/native/quantized/cpu/qlinear_unpack.cpp PROPERTIES COMPILE_FLAGS -Wno-deprecated-declarations)
     endif()
 
 if(USE_TBB)
@@ -1796,14 +1796,18 @@ if(BUILD_PYTHON)
       set(PY_EXT_SUFFIX ".so")
     endif()
   endif()
+
+#   if(CMAKE_COMPILER_IS_GNUCXX AND CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 7.0.0)
+#   string(APPEND CMAKE_CXX_FLAGS " -Wno-stringop-overflow")
+# endif()
   if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
   # Workaround for https://gcc.gnu.org/bugzilla/show_bug.cgi?id=80947 in EmbeddingBag.cpp
-  set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-  set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-  set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-  set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
+  # set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
+  # set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
+  # set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
+  # set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
   set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-attributes)
-  set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-attributes)
+  # set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-attributes)
 endif()
   # Allow different install locations for libcaffe2
   # For setuptools installs (that all build Python), install libcaffe2 into
@@ -1983,12 +1987,12 @@ endif()
   install(DIRECTORY ${CMAKE_BINARY_DIR}/caffe2 DESTINATION ${PYTHON_LIB_REL_PATH}
           FILES_MATCHING PATTERN "*.py")
 endif()
-if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-  # Workaround for https://gcc.gnu.org/bugzilla/show_bug.cgi?id=80947 in EmbeddingBag.cpp
-  set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-  set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-  set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-  set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-  set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-attributes)
-  set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-attributes)
-endif()
+# if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+#   # Workaround for https://gcc.gnu.org/bugzilla/show_bug.cgi?id=80947 in EmbeddingBag.cpp
+#   set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
+#   set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
+#   set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
+#   set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
+#   set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-attributes)
+#   set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-attributes)
+# endif()
