--- a/caffe2/CMakeLists.txt
+++ b/caffe2/CMakeLists.txt
@@ -33,15 +33,7 @@ else()
     set(ATEN_THREADING "NATIVE" CACHE STRING "ATen parallel backend")
   endif()
 endif()
-# if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-#   # Workaround for https://gcc.gnu.org/bugzilla/show_bug.cgi?id=80947 in EmbeddingBag.cpp
-#   set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-#   set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-#   set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-#   set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-#   set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-attributes)
-#   set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-attributes)
-# endif()
+
 set(AT_PARALLEL_OPENMP 0)
 set(AT_PARALLEL_NATIVE 0)
 set(AT_PARALLEL_NATIVE_TBB 0)
@@ -87,15 +79,7 @@ if(INTERN_BUILD_ATEN_OPS)
     DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/contrib/aten/aten_op.h)
   add_library(aten_op_header_gen INTERFACE)
   add_dependencies(aten_op_header_gen __aten_op_header_gen)
-  if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-  # Workaround for https://gcc.gnu.org/bugzilla/show_bug.cgi?id=80947 in EmbeddingBag.cpp
-  set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-  set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-  set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-  set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-  set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-attributes)
-  set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-attributes)
-endif()
+
   # Add source, includes, and libs to lists
   list(APPEND Caffe2_CPU_SRCS ${ATen_CPU_SRCS})
   list(APPEND Caffe2_GPU_SRCS ${ATen_CUDA_SRCS})
@@ -116,15 +100,7 @@ endif()
   list(APPEND Caffe2_HIP_DEPENDENCY_LIBS ${ATen_HIP_DEPENDENCY_LIBS})
   list(APPEND Caffe2_DEPENDENCY_INCLUDE ${ATen_THIRD_PARTY_INCLUDE})
 endif()
-if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-  # Workaround for https://gcc.gnu.org/bugzilla/show_bug.cgi?id=80947 in EmbeddingBag.cpp
-  set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-  set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-  set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-  set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-  set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-attributes)
-  set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-attributes)
-endif()
+
 # ---[ Caffe2 build
 # Note: the folders that are being commented out have not been properly
 # addressed yet.
@@ -145,15 +121,7 @@ add_subdirectory(utils)
 if(BUILD_CAFFE2 OR (NOT USE_FBGEMM))
   add_subdirectory(perfkernels)
 endif()
-if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-  # Workaround for https://gcc.gnu.org/bugzilla/show_bug.cgi?id=80947 in EmbeddingBag.cpp
-  set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-  set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-  set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-  set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-  set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-attributes)
-  set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-attributes)
-endif()
+
 # Skip modules that are not used by libtorch mobile yet.
 if(BUILD_CAFFE2 AND (NOT INTERN_BUILD_MOBILE OR BUILD_CAFFE2_MOBILE))
   add_subdirectory(contrib)
@@ -196,15 +164,7 @@ endif()
 if(NOT BUILD_CAFFE2)
   add_subdirectory(proto)
 endif()
-if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-  # Workaround for https://gcc.gnu.org/bugzilla/show_bug.cgi?id=80947 in EmbeddingBag.cpp
-  set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-  set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-  set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-  set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-  set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-attributes)
-  set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-attributes)
-endif()
+
 # Advanced: if we have allow list specified, we will do intersections for all
 # main lib srcs.
 if(CAFFE2_ALLOWLISTED_FILES)
@@ -232,15 +192,7 @@ if(BUILD_SPLIT_CUDA)
     endif()
   endforeach()
 endif()
-if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-  # Workaround for https://gcc.gnu.org/bugzilla/show_bug.cgi?id=80947 in EmbeddingBag.cpp
-  set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-  set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-  set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-  set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-  set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-attributes)
-  set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-attributes)
-endif()
+
 if(PRINT_CMAKE_DEBUG_INFO)
   message(STATUS "CPU sources: ")
   foreach(tmp ${Caffe2_CPU_SRCS})
@@ -332,15 +284,7 @@ if(PRINT_CMAKE_DEBUG_INFO)
   endforeach()
 
 endif()
-if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-  # Workaround for https://gcc.gnu.org/bugzilla/show_bug.cgi?id=80947 in EmbeddingBag.cpp
-  set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-  set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-  set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-  set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-  set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-attributes)
-  set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-attributes)
-endif()
+
 if(NOT INTERN_BUILD_MOBILE OR BUILD_CAFFE2_MOBILE)
   # ---[ List of libraries to link with
   add_library(caffe2_protos STATIC $<TARGET_OBJECTS:Caffe2_PROTO>)
@@ -396,15 +340,6 @@ endif()
 
 if(NOT TORCH_INSTALL_LIB_DIR)
   set(TORCH_INSTALL_LIB_DIR lib)
-endif()
-if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-  # Workaround for https://gcc.gnu.org/bugzilla/show_bug.cgi?id=80947 in EmbeddingBag.cpp
-  set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-  set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-  set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-  set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-  set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-attributes)
-  set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-attributes)
 endif()
 
 
@@ -605,15 +540,15 @@ if(NOT INTERN_BUILD_MOBILE OR NOT BUILD_CAFFE2_MOBILE)
 
   # Required workaround for LLVM 9 includes.
   if(NOT MSVC)
-    set_source_files_properties(../${TORCH_SRC_DIR}/csrc/jit/tensorexpr/llvm_jit.cpp PROPERTIES COMPILE_FLAGS -Wno-noexcept-type)
+    set_source_files_properties(${TORCH_SRC_DIR}/csrc/jit/tensorexpr/llvm_jit.cpp PROPERTIES COMPILE_FLAGS -Wno-noexcept-type)
     # Force -Werror on several files
-    set_source_files_properties(../${CMAKE_CURRENT_LIST_DIR}/../aten/src/ATen/native/mkldnn/Pooling.cpp PROPERTIES COMPILE_FLAGS "-Werror")
+    set_source_files_properties(${CMAKE_CURRENT_LIST_DIR}/../aten/src/ATen/native/mkldnn/Pooling.cpp PROPERTIES COMPILE_FLAGS "-Werror")
   endif()
   # Disable certain warnings for GCC-9.X
   if(CMAKE_COMPILER_IS_GNUCXX AND (CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 9.0.0))
     # See https://github.com/pytorch/pytorch/issues/38856
-    set_source_files_properties(../${TORCH_SRC_DIR}/csrc/jit/tensorexpr/llvm_jit.cpp PROPERTIES COMPILE_FLAGS "-Wno-redundant-move -Wno-noexcept-type")
-    set_source_files_properties(../${TORCH_SRC_DIR}/csrc/jit/tensorexpr/llvm_codegen.cpp PROPERTIES COMPILE_FLAGS -Wno-init-list-lifetime)
+    set_source_files_properties(${TORCH_SRC_DIR}/csrc/jit/tensorexpr/llvm_jit.cpp PROPERTIES COMPILE_FLAGS "-Wno-redundant-move -Wno-noexcept-type")
+    set_source_files_properties(${TORCH_SRC_DIR}/csrc/jit/tensorexpr/llvm_codegen.cpp PROPERTIES COMPILE_FLAGS -Wno-init-list-lifetime)
   endif()
 
   if(NOT INTERN_DISABLE_MOBILE_INTERP)
@@ -661,7 +596,7 @@ if(NOT INTERN_BUILD_MOBILE OR NOT BUILD_CAFFE2_MOBILE)
         ${TORCH_SRC_DIR}/csrc/jit/serialization/import_legacy.cpp
       )
     else()
-      set_source_files_properties(../
+      set_source_files_properties(
         ${TORCH_SRC_DIR}/csrc/jit/serialization/import.cpp
         PROPERTIES COMPILE_FLAGS "-DC10_DISABLE_LEGACY_IMPORT"
       )
@@ -698,7 +633,7 @@ if(NOT INTERN_BUILD_MOBILE OR NOT BUILD_CAFFE2_MOBILE)
       list(APPEND Caffe2_GPU_SRCS
         ${TORCH_SRC_DIR}/csrc/cuda/nccl.cpp)
     endif()
-    set_source_files_properties(../
+    set_source_files_properties(
       ${TORCH_ROOT}/aten/src/ATen/cuda/detail/LazyNVRTC.cpp
       PROPERTIES COMPILE_DEFINITIONS "NVRTC_SHORTHASH=${CUDA_NVRTC_SHORTHASH}"
     )
@@ -879,7 +814,7 @@ endif()
 
 if(USE_ROCM)
   filter_list(__caffe2_hip_srcs_cpp Caffe2_HIP_SRCS "\\.(cu|hip)$")
-  set_source_files_properties(../${__caffe2_hip_srcs_cpp} PROPERTIES HIP_SOURCE_PROPERTY_FORMAT 1)
+  set_source_files_properties(${__caffe2_hip_srcs_cpp} PROPERTIES HIP_SOURCE_PROPERTY_FORMAT 1)
 endif()
 
 # Compile exposed libraries.
@@ -1987,12 +1922,3 @@ endif()
   install(DIRECTORY ${CMAKE_BINARY_DIR}/caffe2 DESTINATION ${PYTHON_LIB_REL_PATH}
           FILES_MATCHING PATTERN "*.py")
 endif()
-# if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-#   # Workaround for https://gcc.gnu.org/bugzilla/show_bug.cgi?id=80947 in EmbeddingBag.cpp
-#   set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-#   set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-#   set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-#   set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-error=attributes)
-#   set_source_files_properties(../aten/src/ATen/native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-attributes)
-#   set_source_files_properties(../native/EmbeddingBag.cpp PROPERTIES COMPILE_FLAGS -Wno-attributes)
-# endif()
