--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -343,6 +343,7 @@ option(USE_SYSTEM_FXDIV "Use system-provided fxdiv." OFF)
 option(USE_SYSTEM_BENCHMARK "Use system-provided google benchmark." OFF)
 option(USE_SYSTEM_ONNX "Use system-provided onnx." OFF)
 option(USE_SYSTEM_XNNPACK "Use system-provided xnnpack." OFF)
+option(USE_GOLD_LINKER "Use ld.gold to link" ON)
 if(USE_SYSTEM_LIBS)
   set(USE_SYSTEM_CPUINFO ON)
   set(USE_SYSTEM_SLEEF ON)
@@ -684,6 +685,20 @@ if(NOT MSVC)
     # Suppress "The ABI for passing parameters with 64-byte alignment has changed in GCC 4.6"
     string(APPEND CMAKE_CXX_FLAGS " -Wno-psabi")
   endif()
+
+  # Use ld.gold if available, fall back to ld.bfd (the default ld) if not
+  if (USE_GOLD_LINKER)
+      execute_process(COMMAND ${CMAKE_C_COMPILER} -fuse-ld=gold -Wl,--version ERROR_QUIET OUTPUT_VARIABLE LD_VERSION)
+      if (NOT "${LD_VERSION}" MATCHES "GNU gold")
+        message(WARNING "USE_GOLD_LINKER was set but ld.gold isn't available")
+      else()
+        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fuse-ld=gold")
+        set(CMAKE_STATIC_LINKER_FLAGS "${CMAKE_STATIC_LINKER_FLAGS} -fuse-ld=gold")
+        set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -fuse-ld=gold")
+        set(CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} -fuse-ld=gold")
+      endif ()
+  endif ()
+
   string(APPEND CMAKE_CXX_FLAGS " -Wno-error=pedantic")
   string(APPEND CMAKE_CXX_FLAGS " -Wno-error=redundant-decls")
   string(APPEND CMAKE_CXX_FLAGS " -Wno-error=old-style-cast")
