--- a/.github/workflows/run_torchbench.yml
+++ b/.github/workflows/run_torchbench.yml
@@ -49,7 +49,7 @@ jobs:
         run: |
           conda env remove --name pr-ci
       - name: Upload artifact
-        use: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v2
         with:
           name: TorchBench result
           path: ~/.torchbench/bisection/pr${{ github.event.number }}
