--- a/mypy-strict.ini
+++ b/mypy-strict.ini
@@ -61,6 +61,7 @@ files =
     torch/utils/benchmark/utils/timer.py,
     torch/utils/benchmark/utils/valgrind_wrapper,
     torch/utils/_pytree.py
+    torch/utils/get_debug_symbols.py
 
 # Specifically enable imports of benchmark utils. As more of `torch` becomes
 # strict compliant, those modules can be enabled as well.
