--- a/.github/workflows/run_torchbench.yml
+++ b/.github/workflows/run_torchbench.yml
@@ -19,6 +19,11 @@ jobs:
         uses: actions/checkout@v2
         with:
           path: pytorch
+      - name: Checkout TorchBench
+        uses: actions/checkout@v2
+        with:
+          repository: pytorch/benchmark
+          path: benchmark
       - name: Create conda environment
         run: |
           conda create -y -n pr-ci python=3.7
@@ -40,7 +45,7 @@ jobs:
           conda activate pr-ci
           python3 pytorch/.github/scripts/run_torchbench.py \
                   --pytorch-path "${HOME}"/pytorch \
-                  --torchbench-path "${HOME}"/benchmark \
+                  --torchbench-path "${PWD}"/benchmark \
                   --pr-num "$PR_NUM" \
                   --pr-base-sha "$PR_BASE_SHA" \
                   --pr-head-sha "$PR_HEAD_SHA" \
