--- a/.github/workflows/run_torchbench.yml
+++ b/.github/workflows/run_torchbench.yml
@@ -38,7 +38,9 @@ jobs:
           popd
       - name: Run TorchBench
         run: |
+          pushd "${HOME}"/pytorch
           PR_MERGE_BASE=$(git merge-base "$PR_BASE_SHA" "$PR_HEAD_SHA")
+          popd
           PR_BODY_FILE=/tmp/pr-body.txt
           echo "$PR_BODY" > ${PR_BODY_FILE}
           # shellcheck disable=SC1091
@@ -51,9 +53,10 @@ jobs:
                   --pr-base-sha "$PR_MERGE_BASE" \
                   --pr-head-sha "$PR_HEAD_SHA" \
                   --pr-body "$PR_BODY_FILE"
-      - name: Remove conda environment
+      - name: Remove conda environment and cleanup
         run: |
           conda env remove --name pr-ci
+          rm /tmp/pr-body.txt
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
