--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -3595,22 +3595,22 @@
     CompositeExplicitAutograd: split_with_sizes
 
 - func: hsplit.int(Tensor(a) self, int sections) -> Tensor(a)[]
-  variants: function
+  variants: function, method
 
 - func: hsplit.array(Tensor(a) self, int[] indices) -> Tensor(a)[]
-  variants: function
+  variants: function, method
 
 - func: vsplit.int(Tensor(a) self, int sections) -> Tensor(a)[]
-  variants: function
+  variants: function, method
 
 - func: vsplit.array(Tensor(a) self, int[] indices) -> Tensor(a)[]
-  variants: function
+  variants: function, method
 
 - func: dsplit.int(Tensor(a) self, int sections) -> Tensor(a)[]
-  variants: function
+  variants: function, method
 
 - func: dsplit.array(Tensor(a) self, int[] indices) -> Tensor(a)[]
-  variants: function
+  variants: function, method
 
 - func: squeeze(Tensor(a) self) -> Tensor(a)
   variants: function, method
