Support torch.Tensor.expand_dims_

--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -3776,6 +3776,9 @@
 - func: expand_dims(Tensor(a) self, int dim) -> Tensor(a)
   variants: function, method
 
+- func: expand_dims_(Tensor(a!) self, int dim) -> Tensor(a!)
+  variants: method
+
 - func: vander(Tensor x, int? N=None, bool increasing=False) -> Tensor
 
 - func: var(Tensor self, bool unbiased=True) -> Tensor
