--- a/torch/_C/__init__.pyi.in
+++ b/torch/_C/__init__.pyi.in
@@ -977,6 +977,10 @@ class Def(TreeView):
 class Decl(TreeView):
     ...
 
+# Defined in torch/csrc/jit/frontend/source_ref.h
+class SourceRef:
+    ...
+
 # Defined in torch/csrc/distributed/rpc/init.cpp
 def _rpc_init() -> _bool: ...
 
