[jit] Implement ScriptProfile to collect instruction profiles.
Summary:
Introduces two main classes in C++ runtime:

ScriptProfile is the implementation for enalbing and disabling interpreter
profiling in C++. This should be only used from Python, and we will add
corresponding Python API in the next diff.

InstructionSpan is a utility class to instrument execution of each single
instruction. A start timestamp is recorded in the consturctor, and an end
timestamp is recorded in the destructor. During destruction, this will send
runtime data to all enabled ScriptProfile instances.

Test Plan:
build/bin/test_jit --gtest_filter='ScriptProfileTest.Basic'

Reviewers:

Subscribers:

Tasks:

Tags:

[ghstack-poisoned]

--- a/torch/_C/__init__.pyi.in
+++ b/torch/_C/__init__.pyi.in
@@ -478,6 +478,14 @@ class ScriptMethod:
     @property
     def name(self) -> str: ...
 
+class InstructionStats:
+    ...
+
+class _ScriptProfile:
+    def enable(self) -> None: ...
+    def disable(self) -> None: ...
+    def _dump_stats(self) -> Dict[SourceRef, Dict[_int, InstructionStats]]: ...
+
 class ModuleDict:
     def __init__(self, mod: ScriptModule) -> None: ...
     def items(self) -> List[Tuple[str, Any]]: ...
