--- a/torch/_C/__init__.pyi.in
+++ b/torch/_C/__init__.pyi.in
@@ -987,7 +987,10 @@ class Decl(TreeView):
 
 # Defined in torch/csrc/jit/frontend/source_ref.h
 class SourceRef:
-    ...
+    @property
+    def starting_lineno(self) -> _int: ...
+    @property
+    def text(self) -> str: ...
 
 # Defined in torch/csrc/distributed/rpc/init.cpp
 def _rpc_init() -> _bool: ...
